<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_light"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <!-- header -->
    <ImageView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:src="@drawable/header_logo"/>

    <!-- fav & releaseDate -->

    <ImageButton
        android:id="@+id/btn_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:background="@android:color/background_light"
        android:padding="2dp"
        android:paddingLeft="15dp"
        android:src="@drawable/star"
        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btn_favourite"
        android:layout_below="@id/header"
        android:layout_toRightOf="@+id/btn_favourite"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:typeface="monospace"
        tools:text="MY EXTENDED COMPANY NAME"
        />

    <!-- logo in BG -->

    <ImageView
        android:id="@+id/iv_gamecover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:minHeight="300dp"
        android:minWidth="300dp"
        tools:src="@android:drawable/ic_popup_sync"
        />

    <!-- id -->

    <TextView
        android:padding="5dp"
        android:layout_below="@+id/tv_name"
        android:id="@+id/lbl_code"
        android:text="@string/id"
        android:typeface="monospace"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lbl_code"
        android:layout_alignTop="@+id/lbl_code"
        android:padding="5dp"
        android:textStyle="italic"
        tools:text="CODE"
        />

    <!-- web -->

    <TextView
        android:padding="5dp"
        android:layout_below="@+id/lbl_code"
        android:id="@+id/lbl_web"
        android:text="@string/web"
        android:typeface="monospace"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lbl_web"
        android:layout_alignTop="@+id/lbl_web"
        android:padding="5dp"
        android:textStyle="italic"
        tools:text="www.mywebsite.com"
        />

    <!-- text -->

    <TextView
        android:padding="5dp"
        android:layout_below="@+id/lbl_web"
        android:id="@+id/lbl_phone"
        android:text="@string/text"
        android:typeface="monospace"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lbl_phone"
        android:layout_alignTop="@+id/lbl_phone"
        android:padding="5dp"
        tools:text="+49 123456789"
        />

    <!-- Footer buttons -->
    <include layout="@layout/detail_buttons"/>

</RelativeLayout>